vlib/v/checker/tests/hex_lit_has_space_err.out
vlib/v/checker/tests/hex_lit_has_space_err.v:2:19: error: unneeded space before digit `f`
    1 | fn main() {
    2 |     a := 0o1234   fff
      |                   ^
    3 | }
