vlib/v/checker/tests/hex_lit_has_space_err.vv
fn main() {
    a := 0x1234   fff
}
